<resources>
    <string name="app_name">NDJM</string>
    <string name="app_name_full">No dating just MEMES</string>
    <string name="login">Login</string>
    <string name="returntopreviouspage">Return to Login page</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="title_activity_category_menu">CategoryMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_my_profile">My profile</string>
    <string name="action_instruction">How to use</string>
    <string name="action_logout">Logout</string>

    <string name="popup_menu_share">Share</string>
    <string name="popup_menu_download">Download</string>

    <string name="menu_main">Main</string>
    <string name="menu_category1">IT</string>
    <string name="menu_category2">Funny</string>
    <string name="menu_category3">Anime</string>
    <string name="menu_category4">Religious</string>
    <string name="menu_category5">Dark Humor</string>
    <string name="menu_category6">Academical</string>
    <string name="menu_category7">Queer</string>
    <string name="menu_category8">Gaming</string>
    
    <string name="instruction">
        The application enables its users to upload and download memes, thus allowing them to share the most entertaining ones they come across online or within the app itself. Users can scroll through the main or category pages and either like or dislike the amusing memes they encounter. You can see your meme chart on your profile. Wanna see someone\'s else meme chart? Click their nickname. While on someone\'s profile, you can compare their meme chart with yours.
    </string>
</resources>