<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.meme_dating.ui.categoryMain.CategoryMainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_meme_scrolling" />

    <fragment
        android:id="@+id/nav_category1"
        android:name="com.example.meme_dating.ui.category1.Category1Fragment"
        android:label="@string/menu_category1"
        tools:layout="@layout/fragment_meme_scrolling" />
    <fragment
        android:id="@+id/nav_category2"
        android:name="com.example.meme_dating.ui.category2.Category2Fragment"
        android:label="@string/menu_category2"
        tools:layout="@layout/fragment_meme_scrolling" />
    <fragment
        android:id="@+id/nav_category3"
        android:name="com.example.meme_dating.ui.category3.Category3Fragment"
        android:label="@string/menu_category3"
        tools:layout="@layout/fragment_meme_scrolling" />
    <fragment
        android:id="@+id/nav_category4"
        android:name="com.example.meme_dating.ui.category4.Category4Fragment"
        android:label="@string/menu_category4"
        tools:layout="@layout/fragment_meme_scrolling" />
    <fragment
        android:id="@+id/nav_category5"
        android:name="com.example.meme_dating.ui.category5.Category5Fragment"
        android:label="@string/menu_category5"
        tools:layout="@layout/fragment_meme_scrolling" />
    <fragment
        android:id="@+id/nav_category6"
        android:name="com.example.meme_dating.ui.category6.Category6Fragment"
        android:label="@string/menu_category5"
        tools:layout="@layout/fragment_meme_scrolling" />
    <fragment
        android:id="@+id/nav_category7"
        android:name="com.example.meme_dating.ui.category7.Category7Fragment"
        android:label="@string/menu_category5"
        tools:layout="@layout/fragment_meme_scrolling" />
    <fragment
        android:id="@+id/nav_category8"
        android:name="com.example.meme_dating.ui.category8.Category8Fragment"
        android:label="@string/menu_category5"
        tools:layout="@layout/fragment_meme_scrolling" />

</navigation>